more string updates

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -185,9 +185,9 @@
     <string name="confirm_scope_for_delete">Smazat název „%1$s“ od %2$s.\n\nJak chcete tuto změnu uplatnit?\nVAROVÁNÍ: Volbu „%3$s“ nelze vrátit zpět!</string>
     <string name="confirm_test_connection">Doporučujeme toto připojení otestovat, abyste se později vyhnuli problémům.</string>
     <string name="confirm_unsaved_edits">Máte neuložené změny, pokud nyní ukončíte, budou ztraceny.</string>
-    <string name="debug_body">Věnujte prosím čas přesnému popisu problému, se kterým máte zkušenost.</string>
+    <string name="debug_email_body">Věnujte prosím čas přesnému popisu problému, se kterým máte zkušenost.</string>
     <string name="debug_send_info_text">Tím vytvoříte záložní kopii vaší databáze a všechny soubory protokolu a odešlete ji vývojářům. Pokud si nepřejete poslat některý z těchto souborů, odstraňte jej z přílohy mailu ještě před jeho odesláním.</string>
-    <string name="debug_subject">Shromáždit informace o debugování</string>
+    <string name="debug_email_subject">Shromáždit informace o debugování</string>
     <string name="disabled">Vypnutý</string>
     <string name="pe_fast_scroller_overlay_dynamic">Dynamický</string>
     <string name="enabled">Povoleno</string>
@@ -251,7 +251,7 @@
     <string name="lbl_date_added_year">Rok přidání</string>
     <string name="pc_advanced_options">Rozšířené nastavení</string>
     <string name="lbl_all_bookshelves">Všechny knihovny</string>
-    <string name="lbl_anthology">Antologie</string>
+    <string name="lbl_book_type_anthology">Antologie</string>
     <string name="lbl_archive_format">Formát</string>
     <string name="option_info_archive_format_db">Databáze SQLite.</string>
     <string name="option_info_archive_format_json">Všechna data ve formátu JSON.</string>
@@ -294,7 +294,7 @@
     <string name="lbl_certificates">Certifikáty</string>
     <string name="X_lbl_clear_filters">Vymazat filtry</string>
     <string name="lbl_clone_style">Klonovat styl</string>
-    <string name="lbl_collection">Sbírka</string>
+    <string name="lbl_book_type_collection">Sbírka</string>
     <string name="lbl_color">Barva</string>
     <string name="lbl_condition">Stav</string>
     <string name="lbl_condition_dust_cover_missing_or_bad">Chybějící/přijatelný</string>
@@ -313,7 +313,7 @@
     <string name="lbl_credentials">Identifikační údaje uživatele</string>
     <string name="lbl_currency">Měna</string>
     <string name="lbl_database">Databáze</string>
-    <string name="lbl_database_upgrade">Soubory aktualizace databáze.</string>
+    <string name="option_bug_report_database_upgrade">Soubory aktualizace databáze.</string>
     <string name="lbl_date_acquired">Datum Nabytí</string>
     <string name="lbl_date_acquired_day">Den Nabytí</string>
     <string name="lbl_date_acquired_month">Měsíc získaný</string>
@@ -372,7 +372,7 @@
     <string name="lbl_local_search_long">Rozšířené místní vyhledávání</string>
     <string name="lbl_location">Umístění</string>
     <string name="lbl_location_long">Umístění knihy</string>
-    <string name="lbl_logfiles">Záznam souborů.</string>
+    <string name="option_bug_report_logfiles">Záznam souborů.</string>
     <string name="lbl_login_to_search">Přihlaste se k vyhledávání</string>
     <string name="lbl_month">Měsíc</string>
     <string name="lbl_moving_data">Probíhá přesun dat</string>
@@ -390,8 +390,8 @@
     <string name="lbl_date_published_year">Rok vydání</string>
     <string name="lbl_publisher">Vydavatel</string>
     <string name="lbl_publishers">Vydavatelé</string>
-    <string name="lbl_purge_files">Odstranit soubory</string>
-    <string name="lbl_purge_image_cache">Vymazat mezipaměť obrázků</string>
+    <string name="option_purge_files">Odstranit soubory</string>
+    <string name="option_purge_image_cache">Vymazat mezipaměť obrázků</string>
     <string name="lbl_rating">Hodnocení</string>
     <string name="lbl_read">Přečteno</string>
     <string name="lbl_group_read_and_unread">Přečteno amp; Nepřečteno</string>
@@ -408,7 +408,7 @@
     <string name="lbl_search_isbn">Hledat ISBN</string>
     <string name="lbl_select_fields">Zvolit pole</string>
     <string name="lbl_select_website">Vyberte web.:</string>
-    <string name="lbl_send_debug">Hlášení chyb</string>
+    <string name="option_bug_report">Hlášení chyb</string>
     <string name="lbl_series">Série</string>
     <string name="lbl_series_multiple">Série</string>
     <string name="lbl_series_num">#</string>
@@ -471,16 +471,16 @@
     <string name="option_cover_rotate_automatic">Automatický</string>
     <string name="option_cover_rotate_ccw">Proti směru hodinových ručiček</string>
     <string name="option_cover_rotate_cw">Po směru hodinových ručiček</string>
-    <string name="menu_download_ebook_format">Stáhnout eBook (%1$s)</string>
-    <string name="menu_download_folder">Místní složka pro stahování</string>
-    <string name="menu_enable_sync_options">Povolit možnosti synchronizace</string>
+    <string name="option_download_ebook_format">Stáhnout eBook (%1$s)</string>
+    <string name="option_download_folder">Místní složka pro stahování</string>
+    <string name="option_enable_sync_options">Povolit možnosti synchronizace</string>
     <string name="option_import">Importovat</string>
     <string name="option_lend_out_book">Půjčit knihu…</string>
     <string name="option_lend_return_book">Vypůjčená kniha je zpět</string>
-    <string name="menu_rebuild_fts">Obnovit FTS</string>
-    <string name="menu_rebuild_index">Znovu vytvořit index</string>
+    <string name="option_rebuild_fts">Obnovit FTS</string>
+    <string name="option_rebuild_index">Znovu vytvořit index</string>
     <string name="option_set_complete">Nastavit na „kompletní“</string>
-    <string name="menu_set_download_folder">Nastavte složku pro stahování</string>
+    <string name="option_download_set_folder">Nastavte složku pro stahování</string>
     <string name="option_set_incomplete">Nastaveno na „neúplné“</string>
     <string name="option_set_read">Nastavit jako čtení</string>
     <string name="option_set_unread">Nastavit jako „nepřečtené“</string>
