--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -186,9 +186,9 @@
     <string name="confirm_scope_for_delete">Lösche den Titel „%1$s“ von %2$s.\n\nWie möchten Sie diese Änderung anwenden?\nWARNUNG: Die Auswahl „%3$s“ kann nicht rückgängig gemacht werden!</string>
     <string name="confirm_test_connection">Es ist ratsam, diese Verbindung zu testen, um später Probleme zu vermeiden.</string>
     <string name="confirm_unsaved_edits">Einige Änderungen wurden noch nicht gespeichert. Beim Beenden gehen diese Änderungen verloren.</string>
-    <string name="debug_body">Bitte nehmen Sie sich Zeit, das aufgetretene Problem zu beschreiben.</string>
+    <string name="debug_email_body">Bitte nehmen Sie sich Zeit, das aufgetretene Problem zu beschreiben.</string>
     <string name="debug_send_info_text">Dieser Vorgang erstellt eine Sicherheitskopie Ihrer gesamten Datenbank sowie aller Protokolldateien erstellt und an die Entwickler gesendet. Wenn Sie eine dieser Dateien nicht verschicken wollen, löschen Sie diese vor dem Senden aus dem Anhang.</string>
-    <string name="debug_subject">Gesammelte Debug-Informationen</string>
+    <string name="debug_email_subject">Gesammelte Debug-Informationen</string>
     <string name="disabled">Deaktiviert</string>
     <string name="pe_fast_scroller_overlay_dynamic">Dynamisch</string>
     <string name="enabled">Aktiviert</string>
@@ -252,7 +252,7 @@
     <string name="lbl_date_added_year">Jahr der Erfassung</string>
     <string name="pc_advanced_options">Erweitert</string>
     <string name="lbl_all_bookshelves">Alle Bücherregale</string>
-    <string name="lbl_anthology">Anthologie</string>
+    <string name="lbl_book_type_anthology">Anthologie</string>
     <string name="lbl_archive_format">Format</string>
     <string name="option_info_archive_format_db">Die SQLite-Datenbank.</string>
     <string name="option_info_archive_format_json">Alle Daten im JSON-Format.</string>
@@ -295,7 +295,7 @@
     <string name="lbl_certificates">Zertifikate</string>
     <string name="X_lbl_clear_filters">Filter löschen</string>
     <string name="lbl_clone_style">Stil klonen</string>
-    <string name="lbl_collection">Sammlung</string>
+    <string name="lbl_book_type_collection">Sammlung</string>
     <string name="lbl_color">Farbe</string>
     <string name="lbl_condition">Bedingung</string>
     <string name="lbl_condition_dust_cover_missing_or_bad">Vermisst/akzeptabel</string>
@@ -314,7 +314,7 @@
     <string name="lbl_credentials">Nutzeranmeldedaten</string>
     <string name="lbl_currency">Devisen</string>
     <string name="lbl_database">Datenbank</string>
-    <string name="lbl_database_upgrade">Datenbank-Upgrade-Dateien.</string>
+    <string name="option_bug_report_database_upgrade">Datenbank-Upgrade-Dateien.</string>
     <string name="lbl_date_acquired">Datum erworben</string>
     <string name="lbl_date_acquired_day">Tag erworben</string>
     <string name="lbl_date_acquired_month">Monat erworben</string>
@@ -373,7 +373,7 @@
     <string name="lbl_local_search_long">Erweiterte lokale Suche</string>
     <string name="lbl_location">Standort</string>
     <string name="lbl_location_long">Standort des Buches</string>
-    <string name="lbl_logfiles">Protokolldateien.</string>
+    <string name="option_bug_report_logfiles">Protokolldateien.</string>
     <string name="lbl_login_to_search">Melden Sie sich an, um zu suchen</string>
     <string name="lbl_month">Monat</string>
     <string name="lbl_moving_data">Daten werden verschoben</string>
@@ -391,8 +391,8 @@
     <string name="lbl_date_published_year">Jahr der Veröffentlichung</string>
     <string name="lbl_publisher">Verlag</string>
     <string name="lbl_publishers">Verlag</string>
-    <string name="lbl_purge_files">Dateien bereinigen</string>
-    <string name="lbl_purge_image_cache">Zwischenspeicher für Bilder löschen</string>
+    <string name="option_purge_files">Dateien bereinigen</string>
+    <string name="option_purge_image_cache">Zwischenspeicher für Bilder löschen</string>
     <string name="lbl_rating">Bewertung</string>
     <string name="lbl_read">Gelesen</string>
     <string name="lbl_group_read_and_unread">Gelesen und ungelesen</string>
@@ -409,7 +409,7 @@
     <string name="lbl_search_isbn">ISBN-Suche</string>
     <string name="lbl_select_fields">Felder auswählen</string>
     <string name="lbl_select_website">Wählen Sie eine Website aus:</string>
-    <string name="lbl_send_debug">Fehlerbericht</string>
+    <string name="option_bug_report">Fehlerbericht</string>
     <string name="lbl_series">Serie</string>
     <string name="lbl_series_multiple">Serie</string>
     <string name="lbl_series_num">#</string>
@@ -472,16 +472,16 @@
     <string name="option_cover_rotate_automatic">Automatisch</string>
     <string name="option_cover_rotate_ccw">Gegen den Uhrzeigersinn</string>
     <string name="option_cover_rotate_cw">Im Uhrzeigersinn</string>
-    <string name="menu_download_ebook_format">EBook herunterladen (%1$s)</string>
-    <string name="menu_download_folder">Lokaler Download-Ordner</string>
-    <string name="menu_enable_sync_options">Synchronisierungsoptionen aktivieren</string>
+    <string name="option_download_ebook_format">EBook herunterladen (%1$s)</string>
+    <string name="option_download_folder">Lokaler Download-Ordner</string>
+    <string name="option_enable_sync_options">Synchronisierungsoptionen aktivieren</string>
     <string name="option_import">Importieren</string>
     <string name="option_lend_out_book">Buch verleihen…</string>
     <string name="option_lend_return_book">Geliehenes Buch ist zurück</string>
-    <string name="menu_rebuild_fts">FTS neu aufbauen</string>
-    <string name="menu_rebuild_index">Index neu erstellen</string>
+    <string name="option_rebuild_fts">FTS neu aufbauen</string>
+    <string name="option_rebuild_index">Index neu erstellen</string>
     <string name="option_set_complete">Als abgeschlossen markieren</string>
-    <string name="menu_set_download_folder">Legen Sie den Download-Ordner fest</string>
+    <string name="option_download_set_folder">Legen Sie den Download-Ordner fest</string>
     <string name="option_set_incomplete">Als unvollständig markieren</string>
     <string name="option_set_read">Als gelesen markieren</string>
     <string name="option_set_unread">Als ungelesen markieren</string>
