--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -186,9 +186,9 @@
     <string name="confirm_scope_for_delete">Διαγράψτε τον τίτλο «%1$s» κατά %2$s\n\nΠώς θέλετε να εφαρμόσετε αυτήν την αλλαγή;\nΠΡΟΕΙΔΟΠΟΙΗΣΗ: Η επιλογή «%3$s» δεν μπορεί να αναιρεθεί!</string>
     <string name="confirm_test_connection">Συνιστάται να δοκιμάσετε αυτήν τη σύνδεση για να αποφύγετε προβλήματα αργότερα.</string>
     <string name="confirm_unsaved_edits">Υπάρχουν αλλαγές που δεν έχουν αποθηκευτεί, αν γίνει έξοδος τώρα θα χαθούν.</string>
-    <string name="debug_body">Παρακαλούμε περιγράψτε συνοπτικά το πρόβλημα που αντιμετωπίζετε.</string>
+    <string name="debug_email_body">Παρακαλούμε περιγράψτε συνοπτικά το πρόβλημα που αντιμετωπίζετε.</string>
     <string name="debug_send_info_text">Αυτό θα δημιουργήσει ένα αντίγραφο ασφαλείας της βάσης δεδομένων σας καθώς και οποιαδήποτε αρχεία καταγραφής και θα το στείλει στους προγραμματιστές. Εαν δεν θέλετε να στείλετε αυτά τα αρχεία διαγράψτε τα επισυναπτόμενα αρχεία του e-mail πριν την αποστολή.</string>
-    <string name="debug_subject">Συλλέχθησαν πληροφορίες debugging</string>
+    <string name="debug_email_subject">Συλλέχθησαν πληροφορίες debugging</string>
     <string name="disabled">Απενεργοποιημένο</string>
     <string name="pe_fast_scroller_overlay_dynamic">Δυναμικός</string>
     <string name="enabled">Ενεργοποιήθηκε</string>
@@ -252,7 +252,7 @@
     <string name="lbl_date_added_year">Έτος Πρόσθεσης</string>
     <string name="pc_advanced_options">Για προχωρημένους</string>
     <string name="lbl_all_bookshelves">Όλα τα ράφια</string>
-    <string name="lbl_anthology">Ανθολογία</string>
+    <string name="lbl_book_type_anthology">Ανθολογία</string>
     <string name="lbl_archive_format">Μορφή</string>
     <string name="option_info_archive_format_db">Η βάση δεδομένων SQLite.</string>
     <string name="option_info_archive_format_json">Όλα τα δεδομένα σε μορφή JSON.</string>
@@ -295,7 +295,7 @@
     <string name="lbl_certificates">πιστοποιητικών</string>
     <string name="X_lbl_clear_filters">Διαγραφή φίλτρων</string>
     <string name="lbl_clone_style">Αντιγραφή στυλ</string>
-    <string name="lbl_collection">Συλλογή</string>
+    <string name="lbl_book_type_collection">Συλλογή</string>
     <string name="lbl_color">Χρώμα</string>
     <string name="lbl_condition">Κατάσταση</string>
     <string name="lbl_condition_dust_cover_missing_or_bad">Λείπει/δεκτός</string>
@@ -314,7 +314,7 @@
     <string name="lbl_credentials">Διαπιστευτήρια χρήστη</string>
     <string name="lbl_currency">Νομίσματα</string>
     <string name="lbl_database">Βάση δεδομένων</string>
-    <string name="lbl_database_upgrade">Αρχεία αναβάθμισης βάσης δεδομένων.</string>
+    <string name="option_bug_report_database_upgrade">Αρχεία αναβάθμισης βάσης δεδομένων.</string>
     <string name="lbl_date_acquired">Ημερομηνία που αποκτήθηκαν</string>
     <string name="lbl_date_acquired_day">Ημέρα που αποκτήθηκε</string>
     <string name="lbl_date_acquired_month">Μήνας που αποκτήθηκε</string>
@@ -373,7 +373,7 @@
     <string name="lbl_local_search_long">Προηγμένη τοπική αναζήτηση</string>
     <string name="lbl_location">Τοποθεσία</string>
     <string name="lbl_location_long">Τοποθεσία του βιβλίου</string>
-    <string name="lbl_logfiles">Αρχεία καταγραφής.</string>
+    <string name="option_bug_report_logfiles">Αρχεία καταγραφής.</string>
     <string name="lbl_login_to_search">Συνδεθείτε για αναζήτηση</string>
     <string name="lbl_month">Μήνας</string>
     <string name="lbl_moving_data">Μετακίνηση δεδομένων</string>
@@ -391,8 +391,8 @@
     <string name="lbl_date_published_year">Έτος Εκδοσης</string>
     <string name="lbl_publisher">Εκδότης</string>
     <string name="lbl_publishers">Εκδότες</string>
-    <string name="lbl_purge_files">Εκκαθάριση αρχείων</string>
-    <string name="lbl_purge_image_cache">Καθαρή cache εικόνας</string>
+    <string name="option_purge_files">Εκκαθάριση αρχείων</string>
+    <string name="option_purge_image_cache">Καθαρή cache εικόνας</string>
     <string name="lbl_rating">Βαθμολογία</string>
     <string name="lbl_read">Αναγνωσμένα</string>
     <string name="lbl_group_read_and_unread">Αναγνωσμένο &amp; Μη Αναγνωσμένο</string>
@@ -409,7 +409,7 @@
     <string name="lbl_search_isbn">ISBN Αναζήτηση</string>
     <string name="lbl_select_fields">Επιλεγξτε πεδία</string>
     <string name="lbl_select_website">Επιλέξτε έναν ιστότοπο:</string>
-    <string name="lbl_send_debug">Αναφορά σφαλμάτων</string>
+    <string name="option_bug_report">Αναφορά σφαλμάτων</string>
     <string name="lbl_series">Σειρές</string>
     <string name="lbl_series_multiple">Σειρά</string>
     <string name="lbl_series_num">#</string>
@@ -472,16 +472,16 @@
     <string name="option_cover_rotate_automatic">Αυτόματο</string>
     <string name="option_cover_rotate_ccw">Αριστερόστροφος</string>
     <string name="option_cover_rotate_cw">Δεξιόστροφος</string>
-    <string name="menu_download_ebook_format">Λήψη eBook (%1$s)</string>
-    <string name="menu_download_folder">Τοπικός φάκελος λήψης</string>
-    <string name="menu_enable_sync_options">Ενεργοποίηση επιλογών συγχρονισμού</string>
+    <string name="option_download_ebook_format">Λήψη eBook (%1$s)</string>
+    <string name="option_download_folder">Τοπικός φάκελος λήψης</string>
+    <string name="option_enable_sync_options">Ενεργοποίηση επιλογών συγχρονισμού</string>
     <string name="option_import">εισάγω</string>
     <string name="option_lend_out_book">Δανεισμός βιβλίου…</string>
     <string name="option_lend_return_book">Το δανεισμένο βιβλίο είναι πίσω</string>
-    <string name="menu_rebuild_fts">Ανακατασκευή FTS</string>
-    <string name="menu_rebuild_index">Αναδημιουργία ευρετηρίου</string>
+    <string name="option_rebuild_fts">Ανακατασκευή FTS</string>
+    <string name="option_rebuild_index">Αναδημιουργία ευρετηρίου</string>
     <string name="option_set_complete">Ορίστε να «ολοκληρώσετε»</string>
-    <string name="menu_set_download_folder">Ορίστε το φάκελο λήψης</string>
+    <string name="option_download_set_folder">Ορίστε το φάκελο λήψης</string>
     <string name="option_set_incomplete">Ρυθμίστε σε «ατελές»</string>
     <string name="option_set_read">Ορίστε ως «διαβάσετε»</string>
     <string name="option_set_unread">Ορίστε ως «μη αναγνωσμένο»</string>
