--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -186,9 +186,9 @@
     <string name="confirm_scope_for_delete">Eliminar el título «%1$s» por %2$s.\n\n¿Cómo desea aplicar este cambio?\nADVERTENCIA: ¡La opción «%3$s» no se puede deshacer!</string>
     <string name="confirm_test_connection">Es recomendable probar esta conexión para evitar problemas más adelante.</string>
     <string name="confirm_unsaved_edits">Hay cambios que no se han guardado. Si sale ahora, se perderán.</string>
-    <string name="debug_body">Por favor, explique brevemente el problema experimentado.</string>
+    <string name="debug_email_body">Por favor, explique brevemente el problema experimentado.</string>
     <string name="debug_send_info_text">Esto creará una copia de seguridad de su base de datos, así como cualquier archivo de registro y la enviará a los desarrolladores. Si no desea enviar alguno de estos ficheros, elimine los correspondientes adjuntos antes de enviar el correo que se generará.</string>
-    <string name="debug_subject">Recopilando información sobre fallos</string>
+    <string name="debug_email_subject">Recopilando información sobre fallos</string>
     <string name="disabled">Apagado</string>
     <string name="pe_fast_scroller_overlay_dynamic">Dinámica</string>
     <string name="enabled">Habilitado</string>
@@ -252,7 +252,7 @@
     <string name="lbl_date_added_year">Año de inclusión</string>
     <string name="pc_advanced_options">Ajustes avanzados</string>
     <string name="lbl_all_bookshelves">Todas las bibliotecas</string>
-    <string name="lbl_anthology">Antología</string>
+    <string name="lbl_book_type_anthology">Antología</string>
     <string name="lbl_archive_format">Formato</string>
     <string name="option_info_archive_format_db">La base de datos SQLite.</string>
     <string name="option_info_archive_format_json">Todos los datos en formato JSON.</string>
@@ -295,7 +295,7 @@
     <string name="lbl_certificates">Certificados</string>
     <string name="X_lbl_clear_filters">Borrar filtros</string>
     <string name="lbl_clone_style">Duplicar estilo</string>
-    <string name="lbl_collection">Colección</string>
+    <string name="lbl_book_type_collection">Colección</string>
     <string name="lbl_color">Color</string>
     <string name="lbl_condition">Condición</string>
     <string name="lbl_condition_dust_cover_missing_or_bad">Desaparecido/aceptable</string>
@@ -314,7 +314,7 @@
     <string name="lbl_credentials">Credenciales de usuario</string>
     <string name="lbl_currency">Moneda</string>
     <string name="lbl_database">Base de datos</string>
-    <string name="lbl_database_upgrade">Archivos de actualización de base de datos.</string>
+    <string name="option_bug_report_database_upgrade">Archivos de actualización de base de datos.</string>
     <string name="lbl_date_acquired">Fecha de adquisición</string>
     <string name="lbl_date_acquired_day">Día adquirido</string>
     <string name="lbl_date_acquired_month">Mes adquirido</string>
@@ -373,7 +373,7 @@
     <string name="lbl_local_search_long">Búsqueda local avanzada</string>
     <string name="lbl_location">Ubicación</string>
     <string name="lbl_location_long">Ubicación del libro</string>
-    <string name="lbl_logfiles">Archivos de registro.</string>
+    <string name="option_bug_report_logfiles">Archivos de registro.</string>
     <string name="lbl_login_to_search">Iniciar sesión para buscar</string>
     <string name="lbl_month">Mes</string>
     <string name="lbl_moving_data">Moviendo datos</string>
@@ -391,8 +391,8 @@
     <string name="lbl_date_published_year">Año de publicación</string>
     <string name="lbl_publisher">Editorial</string>
     <string name="lbl_publishers">Editores</string>
-    <string name="lbl_purge_files">Borrar ficheros</string>
-    <string name="lbl_purge_image_cache">Borrar caché de imágenes</string>
+    <string name="option_purge_files">Borrar ficheros</string>
+    <string name="option_purge_image_cache">Borrar caché de imágenes</string>
     <string name="lbl_rating">Calificación</string>
     <string name="lbl_read">Leídos</string>
     <string name="lbl_group_read_and_unread">Leído &amp; No leído</string>
@@ -409,7 +409,7 @@
     <string name="lbl_search_isbn">Buscar ISBN</string>
     <string name="lbl_select_fields">Seleccione campos</string>
     <string name="lbl_select_website">Selecciona un sitio web:</string>
-    <string name="lbl_send_debug">Informe de error</string>
+    <string name="option_bug_report">Informe de error</string>
     <string name="lbl_series">Serie</string>
     <string name="lbl_series_multiple">Serie</string>
     <string name="lbl_series_num">#</string>
@@ -472,16 +472,16 @@
     <string name="option_cover_rotate_automatic">Automática</string>
     <string name="option_cover_rotate_ccw">Sentido antihorario</string>
     <string name="option_cover_rotate_cw">Sentido horario</string>
-    <string name="menu_download_ebook_format">Descargar eBook (%1$s)</string>
-    <string name="menu_download_folder">Carpeta de descarga local</string>
-    <string name="menu_enable_sync_options">Habilitar las opciones de sincronización</string>
+    <string name="option_download_ebook_format">Descargar eBook (%1$s)</string>
+    <string name="option_download_folder">Carpeta de descarga local</string>
+    <string name="option_enable_sync_options">Habilitar las opciones de sincronización</string>
     <string name="option_import">Importar</string>
     <string name="option_lend_out_book">Prestar libro…</string>
     <string name="option_lend_return_book">El libro prestado esta de vuelta</string>
-    <string name="menu_rebuild_fts">Reconstruir FTS</string>
-    <string name="menu_rebuild_index">Reconstruir índice</string>
+    <string name="option_rebuild_fts">Reconstruir FTS</string>
+    <string name="option_rebuild_index">Reconstruir índice</string>
     <string name="option_set_complete">Marcar como completo</string>
-    <string name="menu_set_download_folder">Establecer la carpeta de descarga</string>
+    <string name="option_download_set_folder">Establecer la carpeta de descarga</string>
     <string name="option_set_incomplete">Marcar como incompleto</string>
     <string name="option_set_read">Marcar como leído</string>
     <string name="option_set_unread">Marcar como no leído</string>
