--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -188,9 +188,9 @@
     <string name="confirm_scope_for_delete">Supprimer le titre «%1$s» par %2$s.\n\nComment souhaitez-vous appliquer ce changement ?\nAVERTISSEMENT : Le choix « %3$s » ne peut pas être annulé !</string>
     <string name="confirm_test_connection">Il est conseillé de tester cette connexion pour éviter les problèmes par la suite.</string>
     <string name="confirm_unsaved_edits">Des modifications ne sont pas sauvées, si vous quittez maintenant elles seront perdues.</string>
-    <string name="debug_body">Merci de prendre le temps de décrire brièvement le problème que vous rencontrez.</string>
+    <string name="debug_email_body">Merci de prendre le temps de décrire brièvement le problème que vous rencontrez.</string>
     <string name="debug_send_info_text">Cela créera une copie de sauvegarde de votre base de données ainsi que de tous les fichiers journaux et l\'enverra aux développeurs. Si vous ne souhaitez pas envoyer certains de ces fichiers, supprimez les des pièces jointes du courriel avant l\'envoi.</string>
-    <string name="debug_subject">Collecte des informations de débogage en cours</string>
+    <string name="debug_email_subject">Collecte des informations de débogage en cours</string>
     <string name="disabled">Désactivé</string>
     <string name="pe_fast_scroller_overlay_dynamic">Dynamique</string>
     <string name="enabled">Activée</string>
@@ -254,7 +254,7 @@
     <string name="lbl_date_added_year">Année d\'ajout</string>
     <string name="pc_advanced_options">Paramètres avancés</string>
     <string name="lbl_all_bookshelves">Toutes les bibliothèques</string>
-    <string name="lbl_anthology">Anthologie</string>
+    <string name="lbl_book_type_anthology">Anthologie</string>
     <string name="lbl_archive_format">Format</string>
     <string name="option_info_archive_format_db">La base de données SQLite.</string>
     <string name="option_info_archive_format_json">Toutes les données au format JSON.</string>
@@ -297,7 +297,7 @@
     <string name="lbl_certificates">Certificats</string>
     <string name="X_lbl_clear_filters">Effacer les filtres</string>
     <string name="lbl_clone_style">Cloner le style</string>
-    <string name="lbl_collection">Collection</string>
+    <string name="lbl_book_type_collection">Collection</string>
     <string name="lbl_color">Couleur</string>
     <string name="lbl_condition">État</string>
     <string name="lbl_condition_dust_cover_missing_or_bad">Disparu/acceptable</string>
@@ -316,7 +316,7 @@
     <string name="lbl_credentials">Identifiants de l\'utilisateur</string>
     <string name="lbl_currency">Devise</string>
     <string name="lbl_database">Base de données</string>
-    <string name="lbl_database_upgrade">Fichiers de mise à niveau de la base de données.</string>
+    <string name="option_bug_report_database_upgrade">Fichiers de mise à niveau de la base de données.</string>
     <string name="lbl_date_acquired">Date d\'acquisition</string>
     <string name="lbl_date_acquired_day">Jour acquis</string>
     <string name="lbl_date_acquired_month">Mois acquis</string>
@@ -375,7 +375,7 @@
     <string name="lbl_local_search_long">Recherche locale avancée</string>
     <string name="lbl_location">Localisation</string>
     <string name="lbl_location_long">Localisation du livre</string>
-    <string name="lbl_logfiles">Fichiers journaux.</string>
+    <string name="option_bug_report_logfiles">Fichiers journaux.</string>
     <string name="lbl_login_to_search">connectez-vous pour rechercher</string>
     <string name="lbl_month">Mois</string>
     <string name="lbl_moving_data">Déplacement des données en cours</string>
@@ -393,8 +393,8 @@
     <string name="lbl_date_published_year">Année de parution</string>
     <string name="lbl_publisher">Éditeur</string>
     <string name="lbl_publishers">Éditeurs</string>
-    <string name="lbl_purge_files">Nettoyer les fichiers</string>
-    <string name="lbl_purge_image_cache">Effacer le cache des images</string>
+    <string name="option_purge_files">Nettoyer les fichiers</string>
+    <string name="option_purge_image_cache">Effacer le cache des images</string>
     <string name="lbl_rating">Appreciation</string>
     <string name="lbl_read">Lu</string>
     <string name="lbl_group_read_and_unread">Lu &amp; non lu</string>
@@ -411,7 +411,7 @@
     <string name="lbl_search_isbn">recherche par ISBN</string>
     <string name="lbl_select_fields">Sélection des champs</string>
     <string name="lbl_select_website">Sélectionnez un site web:</string>
-    <string name="lbl_send_debug">Rapport de bug</string>
+    <string name="option_bug_report">Rapport de bug</string>
     <string name="lbl_series">Série</string>
     <string name="lbl_series_multiple">Séries</string>
     <string name="lbl_series_num">No</string>
@@ -474,16 +474,16 @@
     <string name="option_cover_rotate_automatic">Automatique</string>
     <string name="option_cover_rotate_ccw">Dans le sens contraire des aiguilles d\'une montre</string>
     <string name="option_cover_rotate_cw">Dans le sens des aiguilles d\'une montre</string>
-    <string name="menu_download_ebook_format">Télécharger l\'eBook (%1$s)</string>
-    <string name="menu_download_folder">Dossier de téléchargement local</string>
-    <string name="menu_enable_sync_options">Activer les options de synchronisation</string>
+    <string name="option_download_ebook_format">Télécharger l\'eBook (%1$s)</string>
+    <string name="option_download_folder">Dossier de téléchargement local</string>
+    <string name="option_enable_sync_options">Activer les options de synchronisation</string>
     <string name="option_import">Importer</string>
     <string name="option_lend_out_book">Prêter le livre…</string>
     <string name="option_lend_return_book">Le livre emprunté est de retour</string>
-    <string name="menu_rebuild_fts">Re-construire FTS</string>
-    <string name="menu_rebuild_index">Reconstruire l\'index</string>
+    <string name="option_rebuild_fts">Re-construire FTS</string>
+    <string name="option_rebuild_index">Reconstruire l\'index</string>
     <string name="option_set_complete">Marquer comme complet</string>
-    <string name="menu_set_download_folder">Définissez le dossier de téléchargement</string>
+    <string name="option_download_set_folder">Définissez le dossier de téléchargement</string>
     <string name="option_set_incomplete">Marquer comme incomplet</string>
     <string name="option_set_read">Marqué comme lu</string>
     <string name="option_set_unread">Maqué comme non lu</string>
