--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -186,9 +186,9 @@
     <string name="confirm_scope_for_delete">Elimina il titolo «%1$s» di %2$s.\n\nCome desideri applicare questa modifica?\nATTENZIONE: la scelta «%3$s» non può essere annullata!</string>
     <string name="confirm_test_connection">Si consiglia di testare questa connessione per evitare problemi in seguito.</string>
     <string name="confirm_unsaved_edits">Vi sono modifiche non salvate, se esci adesso saranno perse.</string>
-    <string name="debug_body">Prenditi qualche secondo per descrivere brevemente il problema riscontrato.</string>
+    <string name="debug_email_body">Prenditi qualche secondo per descrivere brevemente il problema riscontrato.</string>
     <string name="debug_send_info_text">Ciò creerà una copia di backup del database e di tutti i file di registro e lo invierà agli sviluppatori. Cancella i file che non vuoi allegare alla email prima di inviarla.</string>
-    <string name="debug_subject">Informazioni di debug raccolte</string>
+    <string name="debug_email_subject">Informazioni di debug raccolte</string>
     <string name="disabled">Spento</string>
     <string name="pe_fast_scroller_overlay_dynamic">Dinamico</string>
     <string name="enabled">Abilitato</string>
@@ -252,7 +252,7 @@
     <string name="lbl_date_added_year">Anno di inserimento</string>
     <string name="pc_advanced_options">Avanzate</string>
     <string name="lbl_all_bookshelves">Tutte le biblioteche</string>
-    <string name="lbl_anthology">Antologia</string>
+    <string name="lbl_book_type_anthology">Antologia</string>
     <string name="lbl_archive_format">Formato</string>
     <string name="option_info_archive_format_db">Il database SQLite.</string>
     <string name="option_info_archive_format_json">Tutti i dati in formato JSON.</string>
@@ -295,7 +295,7 @@
     <string name="lbl_certificates">Certificati</string>
     <string name="X_lbl_clear_filters">Cancella filtri</string>
     <string name="lbl_clone_style">Duplica stile</string>
-    <string name="lbl_collection">Collezione</string>
+    <string name="lbl_book_type_collection">Collezione</string>
     <string name="lbl_color">Colore</string>
     <string name="lbl_condition">Condizione</string>
     <string name="lbl_condition_dust_cover_missing_or_bad">Mancante/accettabile</string>
@@ -314,7 +314,7 @@
     <string name="lbl_credentials">Credenziali utente</string>
     <string name="lbl_currency">Moneta</string>
     <string name="lbl_database">Banca dati</string>
-    <string name="lbl_database_upgrade">File di aggiornamento del database.</string>
+    <string name="option_bug_report_database_upgrade">File di aggiornamento del database.</string>
     <string name="lbl_date_acquired">Data di acquisizione</string>
     <string name="lbl_date_acquired_day">Giorno acquisito</string>
     <string name="lbl_date_acquired_month">Mese acquisito</string>
@@ -373,7 +373,7 @@
     <string name="lbl_local_search_long">Ricerca locale avanzata</string>
     <string name="lbl_location">Locazione</string>
     <string name="lbl_location_long">Locazione del libro</string>
-    <string name="lbl_logfiles">Log files.</string>
+    <string name="option_bug_report_logfiles">Log files.</string>
     <string name="lbl_login_to_search">Accedi per cercare</string>
     <string name="lbl_month">Mese</string>
     <string name="lbl_moving_data">Spostamento dei dati in corso</string>
@@ -391,8 +391,8 @@
     <string name="lbl_date_published_year">Anno di Pubblicazione</string>
     <string name="lbl_publisher">Editore</string>
     <string name="lbl_publishers">Editori</string>
-    <string name="lbl_purge_files">Cancella i file</string>
-    <string name="lbl_purge_image_cache">Cancella cache immagini</string>
+    <string name="option_purge_files">Cancella i file</string>
+    <string name="option_purge_image_cache">Cancella cache immagini</string>
     <string name="lbl_rating">Valutazione</string>
     <string name="lbl_read">Letto</string>
     <string name="lbl_group_read_and_unread">Letto &amp; Non letto</string>
@@ -409,7 +409,7 @@
     <string name="lbl_search_isbn">Cerca ISBN</string>
     <string name="lbl_select_fields">Seleziona i campi</string>
     <string name="lbl_select_website">Seleziona un sito Web:</string>
-    <string name="lbl_send_debug">Segnalazione di bug</string>
+    <string name="option_bug_report">Segnalazione di bug</string>
     <string name="lbl_series">Serie</string>
     <string name="lbl_series_multiple">Collezione</string>
     <string name="lbl_series_num">#</string>
@@ -472,16 +472,16 @@
     <string name="option_cover_rotate_automatic">Automatico</string>
     <string name="option_cover_rotate_ccw">Senso antiorario</string>
     <string name="option_cover_rotate_cw">Senso orario</string>
-    <string name="menu_download_ebook_format">Scarica eBook (%1$s)</string>
-    <string name="menu_download_folder">Cartella di download locale</string>
-    <string name="menu_enable_sync_options">Abilita opzioni di sincronizzazione</string>
+    <string name="option_download_ebook_format">Scarica eBook (%1$s)</string>
+    <string name="option_download_folder">Cartella di download locale</string>
+    <string name="option_enable_sync_options">Abilita opzioni di sincronizzazione</string>
     <string name="option_import">Importa</string>
     <string name="option_lend_out_book">Presta libro…</string>
     <string name="option_lend_return_book">Il libro preso in prestito è tornato</string>
-    <string name="menu_rebuild_fts">Ricrea FTS</string>
-    <string name="menu_rebuild_index">Ricostruisci indice</string>
+    <string name="option_rebuild_fts">Ricrea FTS</string>
+    <string name="option_rebuild_index">Ricostruisci indice</string>
     <string name="option_set_complete">Contrassegna come completo</string>
-    <string name="menu_set_download_folder">Imposta la cartella di download</string>
+    <string name="option_download_set_folder">Imposta la cartella di download</string>
     <string name="option_set_incomplete">Contrassegna come incompleto</string>
     <string name="option_set_read">Contrassegna come letto</string>
     <string name="option_set_unread">Contrassegna come non letto</string>
