--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -186,9 +186,9 @@
     <string name="confirm_scope_for_delete">Usuń tytuł „%1$s” do %2$s.\n\nJak chcesz zastosować tę zmianę?\nOSTRZEŻENIE: wyboru „%3$s” nie można cofnąć!</string>
     <string name="confirm_test_connection">Zaleca się przetestowanie tego połączenia, aby później uniknąć problemów.</string>
     <string name="confirm_unsaved_edits">Masz niezapisane zmiany, jeśli wyjdziesz teraz, zostaną utracone.</string>
-    <string name="debug_body">Poświęć chwilę na krótki opis problemu, z którym się zetknąłeś.</string>
+    <string name="debug_email_body">Poświęć chwilę na krótki opis problemu, z którym się zetknąłeś.</string>
     <string name="debug_send_info_text">Spowoduje to utworzenie kopii zapasowej bazy danych, a także wszelkich plików dziennika i wysłanie jej do programistów. Jeśli nie chesz, by te dane były wysyłane, usuń je z przygotowanej wiadomości przed jej wysłaniem.</string>
-    <string name="debug_subject">Zbieranie informacji o problemach technicznych</string>
+    <string name="debug_email_subject">Zbieranie informacji o problemach technicznych</string>
     <string name="disabled">Wyłączony</string>
     <string name="pe_fast_scroller_overlay_dynamic">Dynamiczny</string>
     <string name="enabled">Włączone</string>
@@ -252,7 +252,7 @@
     <string name="lbl_date_added_year">Dodano rok</string>
     <string name="pc_advanced_options">Zaawansowane</string>
     <string name="lbl_all_bookshelves">Wszystkie półki na książki</string>
-    <string name="lbl_anthology">Antologia</string>
+    <string name="lbl_book_type_anthology">Antologia</string>
     <string name="lbl_archive_format">Format</string>
     <string name="option_info_archive_format_db">Baza danych SQLite.</string>
     <string name="option_info_archive_format_json">Wszystkie dane w formacie JSON.</string>
@@ -295,7 +295,7 @@
     <string name="lbl_certificates">Certyfikaty</string>
     <string name="X_lbl_clear_filters">Wyczyść filtry</string>
     <string name="lbl_clone_style">Duplikat stylu</string>
-    <string name="lbl_collection">Kolekcja</string>
+    <string name="lbl_book_type_collection">Kolekcja</string>
     <string name="lbl_color">Kolor</string>
     <string name="lbl_condition">Stan</string>
     <string name="lbl_condition_dust_cover_missing_or_bad">Brakujący/zadowalający</string>
@@ -314,7 +314,7 @@
     <string name="lbl_credentials">Dane logowania użytkownika</string>
     <string name="lbl_currency">Waluta</string>
     <string name="lbl_database">Baza danych</string>
-    <string name="lbl_database_upgrade">Pliki aktualizacji bazy danych.</string>
+    <string name="option_bug_report_database_upgrade">Pliki aktualizacji bazy danych.</string>
     <string name="lbl_date_acquired">Data nabycia</string>
     <string name="lbl_date_acquired_day">Dzień nabyty</string>
     <string name="lbl_date_acquired_month">Zakupiony miesiąc</string>
@@ -373,7 +373,7 @@
     <string name="lbl_local_search_long">Zaawansowane wyszukiwanie lokalne</string>
     <string name="lbl_location">Lokalizacja</string>
     <string name="lbl_location_long">Lokalizacja książki</string>
-    <string name="lbl_logfiles">Pliki dziennika.</string>
+    <string name="option_bug_report_logfiles">Pliki dziennika.</string>
     <string name="lbl_login_to_search">Zaloguj się, aby wyszukać</string>
     <string name="lbl_month">Miesiąc</string>
     <string name="lbl_moving_data">Przenoszę dane</string>
@@ -391,8 +391,8 @@
     <string name="lbl_date_published_year">Rok publikacji</string>
     <string name="lbl_publisher">Wydawca</string>
     <string name="lbl_publishers">Wydawcy</string>
-    <string name="lbl_purge_files">Usuwanie plików</string>
-    <string name="lbl_purge_image_cache">Wyczyść pamięć podręczną obrazu</string>
+    <string name="option_purge_files">Usuwanie plików</string>
+    <string name="option_purge_image_cache">Wyczyść pamięć podręczną obrazu</string>
     <string name="lbl_rating">Ocena</string>
     <string name="lbl_read">Czytać</string>
     <string name="lbl_group_read_and_unread">Odczyt / nieprzeczytane</string>
@@ -409,7 +409,7 @@
     <string name="lbl_search_isbn">Szukj wg ISBN</string>
     <string name="lbl_select_fields">Wybierz pola</string>
     <string name="lbl_select_website">Wybierz stronę internetową:</string>
-    <string name="lbl_send_debug">Zgłoszenie błędu</string>
+    <string name="option_bug_report">Zgłoszenie błędu</string>
     <string name="lbl_series">Seria</string>
     <string name="lbl_series_multiple">Serial</string>
     <string name="lbl_series_num">tom#</string>
@@ -472,16 +472,16 @@
     <string name="option_cover_rotate_automatic">Automatyczny</string>
     <string name="option_cover_rotate_ccw">Naprzeciwko ze wsk. zegara</string>
     <string name="option_cover_rotate_cw">Zgodnie ze wsk. zegara</string>
-    <string name="menu_download_ebook_format">Pobierz eBook (%1$s)</string>
-    <string name="menu_download_folder">Lokalny folder pobierania</string>
-    <string name="menu_enable_sync_options">Włącz opcje synchronizacji</string>
+    <string name="option_download_ebook_format">Pobierz eBook (%1$s)</string>
+    <string name="option_download_folder">Lokalny folder pobierania</string>
+    <string name="option_enable_sync_options">Włącz opcje synchronizacji</string>
     <string name="option_import">Importuj</string>
     <string name="option_lend_out_book">Wypożycz książkę…</string>
     <string name="option_lend_return_book">Pożyczona książka powraca</string>
-    <string name="menu_rebuild_fts">Odbuduj FTS</string>
-    <string name="menu_rebuild_index">Przebuduj indeks</string>
+    <string name="option_rebuild_fts">Odbuduj FTS</string>
+    <string name="option_rebuild_index">Przebuduj indeks</string>
     <string name="option_set_complete">Ustaw na „uzupełnij”</string>
-    <string name="menu_set_download_folder">Ustaw folder pobierania</string>
+    <string name="option_download_set_folder">Ustaw folder pobierania</string>
     <string name="option_set_incomplete">Ustaw na „niekompletny”</string>
     <string name="option_set_read">Ustaw jako „czytaj”</string>
     <string name="option_set_unread">Ustaw jako „nieprzeczytane”</string>
