--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -186,9 +186,9 @@
     <string name="confirm_scope_for_delete">Удалить заголовок «%1$s» пользователем %2$s.\n\nКак вы хотите применить это изменение? Примечание.\nВНИМАНИЕ «%3$s» нельзя отменить!</string>
     <string name="confirm_test_connection">Желательно проверить это соединение, чтобы избежать проблем в дальнейшем.</string>
     <string name="confirm_unsaved_edits">Если вы выйдете сейчас, не сохраненные изменения будут потеряны.</string>
-    <string name="debug_body">Пожалуйста, кратко опишите обнаруженную ошибку.</string>
+    <string name="debug_email_body">Пожалуйста, кратко опишите обнаруженную ошибку.</string>
     <string name="debug_send_info_text">Это создаст резервную копию вашей базы данных, а также любых файлов журналов и отправит ее разработчикам. Если вы не хотите отправлять какой-либо из этих файлов, удалите его из приложений письма до отправки.</string>
-    <string name="debug_subject">Собрана отладочная информация</string>
+    <string name="debug_email_subject">Собрана отладочная информация</string>
     <string name="disabled">Выключен</string>
     <string name="pe_fast_scroller_overlay_dynamic">динамический</string>
     <string name="enabled">Включено</string>
@@ -252,7 +252,7 @@
     <string name="lbl_date_added_year">Добавленый год</string>
     <string name="pc_advanced_options">Дополнительные настройки</string>
     <string name="lbl_all_bookshelves">Все книжные полки</string>
-    <string name="lbl_anthology">Антология</string>
+    <string name="lbl_book_type_anthology">Антология</string>
     <string name="lbl_archive_format">Формат</string>
     <string name="option_info_archive_format_db">База данных SQLite.</string>
     <string name="option_info_archive_format_json">Все данные в формате JSON.</string>
@@ -295,7 +295,7 @@
     <string name="lbl_certificates">Cертификаты</string>
     <string name="X_lbl_clear_filters">Сбросить фильтры</string>
     <string name="lbl_clone_style">Клонировать стиль</string>
-    <string name="lbl_collection">Коллекция</string>
+    <string name="lbl_book_type_collection">Коллекция</string>
     <string name="lbl_color">Цвет</string>
     <string name="lbl_condition">Условие</string>
     <string name="lbl_condition_dust_cover_missing_or_bad">Отсутствует/приемлемо</string>
@@ -314,7 +314,7 @@
     <string name="lbl_credentials">Учетные данные пользователя</string>
     <string name="lbl_currency">валюта</string>
     <string name="lbl_database">База данных</string>
-    <string name="lbl_database_upgrade">Файлы обновления базы данных.</string>
+    <string name="option_bug_report_database_upgrade">Файлы обновления базы данных.</string>
     <string name="lbl_date_acquired">Дата покупки</string>
     <string name="lbl_date_acquired_day">День куплен</string>
     <string name="lbl_date_acquired_month">Месяц купил</string>
@@ -373,7 +373,7 @@
     <string name="lbl_local_search_long">Расширенный локальный поиск</string>
     <string name="lbl_location">Местоположение</string>
     <string name="lbl_location_long">Местоположение книги</string>
-    <string name="lbl_logfiles">Лог-файлы.</string>
+    <string name="option_bug_report_logfiles">Лог-файлы.</string>
     <string name="lbl_login_to_search">Авторизуйтесь для поиска</string>
     <string name="lbl_month">Месяц</string>
     <string name="lbl_moving_data">Перенос данных</string>
@@ -391,8 +391,8 @@
     <string name="lbl_date_published_year">Год публикации</string>
     <string name="lbl_publisher">Издатель</string>
     <string name="lbl_publishers">Издатели</string>
-    <string name="lbl_purge_files">Очистка файлов</string>
-    <string name="lbl_purge_image_cache">Очистить кэш изображений</string>
+    <string name="option_purge_files">Очистка файлов</string>
+    <string name="option_purge_image_cache">Очистить кэш изображений</string>
     <string name="lbl_rating">Оценка</string>
     <string name="lbl_read">Прочитана</string>
     <string name="lbl_group_read_and_unread">Прочитано &amp; Не прочитано</string>
@@ -409,7 +409,7 @@
     <string name="lbl_search_isbn">поиск по ISBN</string>
     <string name="lbl_select_fields">Выберите поля</string>
     <string name="lbl_select_website">Выберите сайт:</string>
-    <string name="lbl_send_debug">Отчет об ошибке</string>
+    <string name="option_bug_report">Отчет об ошибке</string>
     <string name="lbl_series">Серия</string>
     <string name="lbl_series_multiple">Серии</string>
     <string name="lbl_series_num">№</string>
@@ -472,16 +472,16 @@
     <string name="option_cover_rotate_automatic">автоматическая</string>
     <string name="option_cover_rotate_ccw">Против часовой</string>
     <string name="option_cover_rotate_cw">По часовой</string>
-    <string name="menu_download_ebook_format">Скачать электронную книгу (%1$s)</string>
-    <string name="menu_download_folder">Локальная папка загрузки</string>
-    <string name="menu_enable_sync_options">Включить параметры синхронизации</string>
+    <string name="option_download_ebook_format">Скачать электронную книгу (%1$s)</string>
+    <string name="option_download_folder">Локальная папка загрузки</string>
+    <string name="option_enable_sync_options">Включить параметры синхронизации</string>
     <string name="option_import">Импортировать</string>
     <string name="option_lend_out_book">Одолжить книгу…</string>
     <string name="option_lend_return_book">Заимствованная книга возвращается</string>
-    <string name="menu_rebuild_fts">Переобрать FTS</string>
-    <string name="menu_rebuild_index">Перестроить индекс</string>
+    <string name="option_rebuild_fts">Переобрать FTS</string>
+    <string name="option_rebuild_index">Перестроить индекс</string>
     <string name="option_set_complete">Отметка завершена</string>
-    <string name="menu_set_download_folder">Установите папку загрузки</string>
+    <string name="option_download_set_folder">Установите папку загрузки</string>
     <string name="option_set_incomplete">Отметить не полностью</string>
     <string name="option_set_read">Марк читать</string>
     <string name="option_set_unread">Марк не читается</string>
