--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -188,9 +188,9 @@
     <string name="confirm_scope_for_delete">“%1$s” başlığını %2$s ile silin.\n\nBu değişikliği nasıl uygulamak istersiniz?\nUYARI: “%3$s” seçimi geri alınamaz!</string>
     <string name="confirm_test_connection">Daha sonra sorunları önlemek için bu bağlantıyı test etmeniz önerilir.</string>
     <string name="confirm_unsaved_edits">Saklanmamış değişiklikler var, şimdi çıkarsanız hepsi silinecektir.</string>
-    <string name="debug_body">Lütfen yaşamakta olduğunuz sorunu kısaca anlatınız.</string>
+    <string name="debug_email_body">Lütfen yaşamakta olduğunuz sorunu kısaca anlatınız.</string>
     <string name="debug_send_info_text">Bu, herhangi bir günlük dosyasının yanı sıra veritabanınızın yedek bir kopyasını oluşturacak ve geliştiricilere gönderecektir. Eğer bu dosyaları bize göndermek istemezseniz göndermeden önce lütfen e-posta eklerinden kaldırın.</string>
-    <string name="debug_subject">Hata ayıklama bilgisi alındı</string>
+    <string name="debug_email_subject">Hata ayıklama bilgisi alındı</string>
     <string name="disabled">Kapalı</string>
     <string name="pe_fast_scroller_overlay_dynamic">Dinamik</string>
     <string name="enabled">Etkin</string>
@@ -255,7 +255,7 @@
     <string name="lbl_date_added_year">Eklenen yıl</string>
     <string name="pc_advanced_options">Gelişmiş</string>
     <string name="lbl_all_bookshelves">Tüm raflardan</string>
-    <string name="lbl_anthology">Seçmeler</string>
+    <string name="lbl_book_type_anthology">Seçmeler</string>
     <string name="lbl_archive_format">Biçim</string>
     <string name="option_info_archive_format_db">SQLite veritabanı.</string>
     <string name="option_info_archive_format_json">Tüm veriler JSON formatında.</string>
@@ -298,7 +298,7 @@
     <string name="lbl_certificates">Sertifikalar</string>
     <string name="X_lbl_clear_filters">Filtreleri Temizle</string>
     <string name="lbl_clone_style">Biçemi çoğalt</string>
-    <string name="lbl_collection">Toplamak</string>
+    <string name="lbl_book_type_collection">Toplamak</string>
     <string name="lbl_color">Renk</string>
     <string name="lbl_condition">Şart</string>
     <string name="lbl_condition_dust_cover_missing_or_bad">Eksik/kabul edilebilir</string>
@@ -317,7 +317,7 @@
     <string name="lbl_credentials">Kullanıcı kimlik bilgileri</string>
     <string name="lbl_currency">Para birimi</string>
     <string name="lbl_database">Veri tabanı</string>
-    <string name="lbl_database_upgrade">Veritabanı yükseltme dosyaları.</string>
+    <string name="option_bug_report_database_upgrade">Veritabanı yükseltme dosyaları.</string>
     <string name="lbl_date_acquired">Alınan Tarih</string>
     <string name="lbl_date_acquired_day">Alınan Gün</string>
     <string name="lbl_date_acquired_month">Alınan Ay</string>
@@ -376,7 +376,7 @@
     <string name="lbl_local_search_long">Gelişmiş Yerel Arama</string>
     <string name="lbl_location">Konum</string>
     <string name="lbl_location_long">Kitabın yeri</string>
-    <string name="lbl_logfiles">Log dosyaları.</string>
+    <string name="option_bug_report_logfiles">Log dosyaları.</string>
     <string name="lbl_login_to_search">Aramak için giriş yapın</string>
     <string name="lbl_month">Ay</string>
     <string name="lbl_moving_data">Veriler taşınıyor</string>
@@ -394,8 +394,8 @@
     <string name="lbl_date_published_year">Yayım yılı</string>
     <string name="lbl_publisher">Yayınevi</string>
     <string name="lbl_publishers">Yayıncılar</string>
-    <string name="lbl_purge_files">Dosyaları temizle</string>
-    <string name="lbl_purge_image_cache">Görüntü önbelleğini temizle</string>
+    <string name="option_purge_files">Dosyaları temizle</string>
+    <string name="option_purge_image_cache">Görüntü önbelleğini temizle</string>
     <string name="lbl_rating">Değerlendirme</string>
     <string name="lbl_read">Okunmuş</string>
     <string name="lbl_group_read_and_unread">Okunan &amp; Okunmayan</string>
@@ -412,7 +412,7 @@
     <string name="lbl_search_isbn">ISBN arama</string>
     <string name="lbl_select_fields">Alanları seçin</string>
     <string name="lbl_select_website">Bir web sitesi seçin:</string>
-    <string name="lbl_send_debug">Hata raporu</string>
+    <string name="option_bug_report">Hata raporu</string>
     <string name="lbl_series">Dizi</string>
     <string name="lbl_series_multiple">Dizi</string>
     <string name="lbl_series_num">#</string>
@@ -476,16 +476,16 @@
     <string name="option_cover_rotate_automatic">Otomatik</string>
     <string name="option_cover_rotate_ccw">Saat yönünün tersine</string>
     <string name="option_cover_rotate_cw">Saat yönünde</string>
-    <string name="menu_download_ebook_format">E-Kitabı İndir (%1$s)</string>
-    <string name="menu_download_folder">Yerel indirme klasörü</string>
-    <string name="menu_enable_sync_options">Senkronizasyon seçeneklerini etkinleştir</string>
+    <string name="option_download_ebook_format">E-Kitabı İndir (%1$s)</string>
+    <string name="option_download_folder">Yerel indirme klasörü</string>
+    <string name="option_enable_sync_options">Senkronizasyon seçeneklerini etkinleştir</string>
     <string name="option_import">Ithal etmek</string>
     <string name="option_lend_out_book">Kitabı ödünç ver…</string>
     <string name="option_lend_return_book">Ödünç alınan kitap geri döndü</string>
-    <string name="menu_rebuild_fts">FTS\'yi yeniden yapıla</string>
-    <string name="menu_rebuild_index">Dizini yeniden oluştur</string>
+    <string name="option_rebuild_fts">FTS\'yi yeniden yapıla</string>
+    <string name="option_rebuild_index">Dizini yeniden oluştur</string>
     <string name="option_set_complete">“Tamamla” olarak ayarla</string>
-    <string name="menu_set_download_folder">İndirme klasörünü ayarlayın</string>
+    <string name="option_download_set_folder">İndirme klasörünü ayarlayın</string>
     <string name="option_set_incomplete">Eksik ayarla</string>
     <string name="option_set_read">Okundu olarak işaretle</string>
     <string name="option_set_unread">Okunmamış olarak işaretle</string>
