--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -184,9 +184,9 @@
     <string name="confirm_scope_for_delete">Verwijder de titel „%1$s” door %2$s.\n\nHoe wilt u deze wijziging toepassen?\nWAARSCHUWING: De keuze „%3$s” kan niet ongedaan worden gemaakt!</string>
     <string name="confirm_test_connection">Het is raadzaam om deze verbinding te testen om later problemen te voorkomen.</string>
     <string name="confirm_unsaved_edits">Je hebt niet opgeslagen veranderingen. Als je nu afsluit gaan die verloren.</string>
-    <string name="debug_body">Beschrijf in het kort de problemen die je hebt ondervonden.</string>
+    <string name="debug_email_body">Beschrijf in het kort de problemen die je hebt ondervonden.</string>
     <string name="debug_send_info_text">Dit maakt een back-up van je hele database en van alle log-bestanden en zend deze naar de ontwikkelaars. Als je deze bestanden niet wilt opsturen, kan je ze van de bijlagen lijst in het e-mailbericht verwijderen voordat je dit verstuurt.</string>
-    <string name="debug_subject">Verzamelde foutopsporingsgegevens</string>
+    <string name="debug_email_subject">Verzamelde foutopsporingsgegevens</string>
     <string name="disabled">Uitgeschakeld</string>
     <string name="pe_fast_scroller_overlay_dynamic">Dynamisch</string>
     <string name="enabled">Ingeschakeld</string>
@@ -250,7 +250,7 @@
     <string name="lbl_date_added_year">Jaar</string>
     <string name="pc_advanced_options">Geavanceerd</string>
     <string name="lbl_all_bookshelves">Alle boekenplanken</string>
-    <string name="lbl_anthology">Bloemlezing</string>
+    <string name="lbl_book_type_anthology">Bloemlezing</string>
     <string name="lbl_archive_format">Formaat</string>
     <string name="option_info_archive_format_db">De SQLite-database.</string>
     <string name="option_info_archive_format_json">Alle gegevens in JSON formaat.</string>
@@ -293,7 +293,7 @@
     <string name="lbl_certificates">Certificaten</string>
     <string name="X_lbl_clear_filters">Filters wissen</string>
     <string name="lbl_clone_style">Stijl klonen</string>
-    <string name="lbl_collection">Collectie</string>
+    <string name="lbl_book_type_collection">Collectie</string>
     <string name="lbl_color">Kleur</string>
     <string name="lbl_condition">Staat</string>
     <string name="lbl_condition_dust_cover_missing_or_bad">Missend/pover</string>
@@ -312,7 +312,7 @@
     <string name="lbl_credentials">Inloggegevens van gebruiker</string>
     <string name="lbl_currency">Munt</string>
     <string name="lbl_database">Database</string>
-    <string name="lbl_database_upgrade">Database-upgradebestanden.</string>
+    <string name="option_bug_report_database_upgrade">Database-upgradebestanden.</string>
     <string name="lbl_date_acquired">Datum verworven</string>
     <string name="lbl_date_acquired_day">Dag verworven</string>
     <string name="lbl_date_acquired_month">Maand verworven</string>
@@ -371,7 +371,7 @@
     <string name="lbl_local_search_long">Geavanceerd lokaal zoeken</string>
     <string name="lbl_location">Locatie</string>
     <string name="lbl_location_long">Locatie van het boek</string>
-    <string name="lbl_logfiles">Log bestanden.</string>
+    <string name="option_bug_report_logfiles">Log bestanden.</string>
     <string name="lbl_login_to_search">Aanmelden om te zoeken</string>
     <string name="lbl_month">Maand</string>
     <string name="lbl_moving_data">Gegevens verplaatsen</string>
@@ -389,8 +389,8 @@
     <string name="lbl_date_published_year">Jaar</string>
     <string name="lbl_publisher">Uitgever</string>
     <string name="lbl_publishers">Uitgevers</string>
-    <string name="lbl_purge_files">Bestanden opschonen</string>
-    <string name="lbl_purge_image_cache">Afbeeldingen cache wissen</string>
+    <string name="option_purge_files">Bestanden opschonen</string>
+    <string name="option_purge_image_cache">Afbeeldingen cache wissen</string>
     <string name="lbl_rating">Waardering</string>
     <string name="lbl_read">Gelezen</string>
     <string name="lbl_group_read_and_unread">Gelezen &amp; Ongelezen</string>
@@ -407,7 +407,7 @@
     <string name="lbl_search_isbn">ISBN zoeken</string>
     <string name="lbl_select_fields">Selecteer velden</string>
     <string name="lbl_select_website">Selecteer een website:</string>
-    <string name="lbl_send_debug">Bugrapport</string>
+    <string name="option_bug_report">Bugrapport</string>
     <string name="lbl_series">Reeks</string>
     <string name="lbl_series_multiple">Reeksen</string>
     <string name="lbl_series_num">nr.</string>
@@ -471,16 +471,16 @@
     <string name="option_cover_rotate_automatic">Automatisch</string>
     <string name="option_cover_rotate_ccw">Links roteren</string>
     <string name="option_cover_rotate_cw">Rechts roteren</string>
-    <string name="menu_download_ebook_format">EBook downloaden (%1$s)</string>
-    <string name="menu_download_folder">Lokale downloadmap</string>
-    <string name="menu_enable_sync_options">Synchronisatie-opties inschakelen</string>
+    <string name="option_download_ebook_format">EBook downloaden (%1$s)</string>
+    <string name="option_download_folder">Lokale downloadmap</string>
+    <string name="option_enable_sync_options">Synchronisatie-opties inschakelen</string>
     <string name="option_import">Importeren</string>
     <string name="option_lend_out_book">Boek uitlenen…</string>
     <string name="option_lend_return_book">Uitgeleend boek is terug</string>
-    <string name="menu_rebuild_fts">FTS opnieuw opbouwen</string>
-    <string name="menu_rebuild_index">Index opnieuw opbouwen</string>
+    <string name="option_rebuild_fts">FTS opnieuw opbouwen</string>
+    <string name="option_rebuild_index">Index opnieuw opbouwen</string>
     <string name="option_set_complete">Markeer als volledig</string>
-    <string name="menu_set_download_folder">Stel de downloadmap in</string>
+    <string name="option_download_set_folder">Stel de downloadmap in</string>
     <string name="option_set_incomplete">Markeer als onvolledig</string>
     <string name="option_set_read">Markeer als gelezen</string>
     <string name="option_set_unread">Markeer als ongelezen</string>
